converted to single page website

--- a/src/components/detailModal/DetailModal.module.css
+++ b/src/components/detailModal/DetailModal.module.css
@@ -1,32 +1,49 @@
 .details {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    position: relative;
-    width: 80%;
-    left: 10%;
+    padding: 0;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
     background-color: #1f2937;
-    margin: 30px 0;
-    border-radius: 20px;
+    text-align: center;
+    width: 90%;
+    z-index: 10;
+    position: fixed;
+    top: 5vh;
+    bottom: 5vh;
+    left: 5%;
+}
+
+.arrow {
+    position: absolute;
+    height: 35px;
+    width: 35px;
+    color: white;
+    top: 20px;
+    left: 20px;
+    cursor: pointer;
+}
+
+.arrow:hover {
+    color: #6366f1;
+    transition: 0.3s;
 }
 
 .img {
-    height: 600px;
     width: 300px;
-    border-radius: 20px 0 0 20px;
+    border-radius: 10px 0 0 10px;
 }
 
 hr {
     width: 85%;
     opacity: 30%;
+    margin: 0% auto;
 }
 
 .title {
     margin: 0;
     color: white;
-    font-size: 2rem;
-    padding: 10px;
+    font-size: 1.65rem;
+    padding: 15px 0;
 }
 
 .ratingNdAll {
@@ -34,29 +51,32 @@ hr {
     justify-content: space-around;
 }
 
+.data {
+    padding: 0 40px;
+}
+
 .ratingNdAll__heading {
     color: #6366f1;
     margin: 0;
-    padding: 10px;
+    padding: 7px 0 ;
     font-size: 1.25rem;
 }
 
 .ratingNdAll__content {
     color: white;
     margin: 0;
-    padding-bottom: 15px;
+    padding-bottom: 13px;
 }
 
 .genres {
     color: #6366f1;
     text-align: left;
     font-size: 1.25rem;
-    padding: 10px 40px;
+    padding-top: 3px;
     margin: 0%;
 }
 
 .genreList {
-    /* list-style: none; */
     display: flex;
     justify-content: space-around;
     color: white;
@@ -67,5 +87,6 @@ hr {
 .synopsis {
     color: white;
     text-align: justify;
-    padding: 0 40px;
+    padding: 0;
+    margin-top: 10px;
 }
